objects/APTS_Configurator_Cart_Summary__c.object
<CustomObject>
    <description>To manage summary of product details for Local Configurator functionality.</description>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Configurator Cart Summaries</relationshipLabel>
        <relationshipName>Configurator_Cart_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Configurator Cart Summaries</relationshipLabel>
        <relationshipName>Configurator_Cart_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Assembly__c</fullName>
        <label>Assembly</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price_Indirect__c</fullName>
        <label>List Price Indirect</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Base_Price__c</fullName>
        <description>Base price of product added</description>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Carpenteria__c</fullName>
        <label>Carpenteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Cart_Line_Number__c</fullName>
        <description>Line number for each item in cart similar to Line item&apos;s line number.</description>
        <externalId>true</externalId>
        <label>Cart Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Comment__c</fullName>
        <description>Req-5790, This field is used to manage the text fields in Bulk Upload file at line level</description>
        <label>Line Item Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigIT_Session_Id__c</fullName>
        <label>ConfigIT Session Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configuration_Reference_Id__c</fullName>
        <label>Configuration Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Status__c</fullName>
        <description>This field holds the value of configure status like when record inserted using bulk upload it will have status as Imported and if manually added into cart it will have New status.</description>
        <label>Upload Status</label>
        <picklist>
            <picklistValues>
                <fullName>Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ConfigIT Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Design Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Cost_Unit__c</fullName>
        <description>is mapped to Pricing Unit (2017-03-15)</description>
        <label>Cost Unit</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CustReqDisc__c</fullName>
        <description>Release: QFA-R3-MR4-REQ:6120- US:1819- WA:1819
Description: Created a new field in Cart Summary which holds the Customer Requested Discount from %Discount column in BulkUpload file, to display in SalesWorkspace page.</description>
        <label>Cust. Req Disc. %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Cust_Requested_Disc__c</fullName>
        <label>Cust. Requested Disc. %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Product_Code__c</fullName>
        <label>Customer Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Dimension__c</fullName>
        <label>Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Percentage__c</fullName>
        <label>Discount %</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Discount_Type__c</fullName>
        <label>Discount Type</label>
        <picklist>
            <picklistValues>
                <fullName>Net Price Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Substitute Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--None--</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_ExtConfigDt__c</fullName>
        <description>External Configuration Date</description>
        <label>Configuration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Has_Scale_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Scale Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_2_Code__c</fullName>
        <formula>APTS_Product__r.APTS_Hierarchy_Level_2_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level 2 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_3_Code__c</fullName>
        <formula>APTS_Product__r.APTS_Hierarchy_Level_3_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level 3 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Level_4_Code__c</fullName>
        <formula>APTS_Product__r.APTS_Hierarchy_Level_4_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level 4 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Auto_Approval_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>QfA-R3-MR2 - REQ# 6455 - Boolean to identify the line items satisfying standard discount conditions</description>
        <label>Is Auto Approval Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Consolidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consolidated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Discount__c</fullName>
        <label>Standard Discount</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Standard_Net__c</fullName>
        <label>Std. Net</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Measure__c</fullName>
        <label>Unit Of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LP_Unit_Of_Price__c</fullName>
        <label>Unit Of Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Configurator_System_Id__c</fullName>
        <label>Local Configurator System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Market_Price__c</fullName>
        <label>Market Price</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Delivery_Qty__c</fullName>
        <label>Quantity of Package</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Min_Order_Qty__c</fullName>
        <label>Min Order Qty</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Override__c</fullName>
        <label>Net Price Override</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price__c</fullName>
        <description>Price after all discount</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage1__c</fullName>
        <description>Created a Field for QFA-R3-MR3-Req#6487-US#2918</description>
        <label>Percentage1</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage1_direct__c</fullName>
        <description>Created a Field for QFA-R3-MR3-Req#6487-US#2918</description>
        <label>Percentage1_direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage2__c</fullName>
        <description>Created a Field for QFA-R3-MR3-Req#6487-US#2918</description>
        <label>Percentage2</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage2_direct__c</fullName>
        <description>Created a Field for QFA-R3-MR3-Req#6487-US#2918</description>
        <label>Percentage2_direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage3__c</fullName>
        <description>Created a Field for QFA-R3-MR3-Req#6487-US#2918</description>
        <label>Percentage3</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Percentage3_direct__c</fullName>
        <description>field used to store percentage3 from SAP for calculations in Approval summary page.
value is saved in Workspace and then will be used in Approval summary page.
Introduced in R2</description>
        <label>Percentage3_direct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Code__c</fullName>
        <description>QFA-R3-MR2-Req#6149-US#1842-Scaling on template - quotation</description>
        <formula>APTS_Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Configurator Cart Summaries</relationshipLabel>
        <relationshipName>Configurator_Cart_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Qty__c</fullName>
        <description>Quantity entered by the user.</description>
        <label>Qty.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Quadro__c</fullName>
        <label>Quadro</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Configurator Cart Summaries</relationshipLabel>
        <relationshipName>Configurator_Cart_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Scale_Types_Count__c</fullName>
        <description>QFA-R3-MR2-Req#6149-US#1842-Scale type count for this cart summary</description>
        <label>Scale Types Count</label>
        <summaryForeignKey>APTS_Product_Item_Scale_Data__c.APTS_Parent_Configurator_Cart_Summary_ID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Shape__c</fullName>
        <label>Shape</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Third_Party__c</fullName>
        <label>3rd Party?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Level__c</fullName>
        <description>QfA-R3-MR2 - REQ# 6137/6138 - Field to store the approval level of line item based on threshold</description>
        <label>Approval Level on Line item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Threshold_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RQ- 5807 This field is used to identify whether the Cart Summary has Crossed Approval Threshold Limit</description>
        <label>Threshold Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Total_List_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total List Price (List Price with quantity) for a line item</description>
        <label>Total List Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Sales_Price__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Total Net Sales Price for a Line Item.</description>
        <label>Total Net Sales Price</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Unit_Net_Price__c</fullName>
        <description>Price without Quantity added</description>
        <formula>APTS_Net_Price__c / APTS_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WholesalerLS__c</fullName>
        <label>APTS_WholesalerLS</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_SAP_Blank_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SAP returns -999 if List Price is blank (undefined / null) because it can only return numeric values and the UI is supposed to show a warning for List Price == 0 and an error for List Price == blank. Apex/Javascript will set this field to true/false</description>
        <label>Is List Price Blank in SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Policy_Max__c</fullName>
        <description>only used for R6 RQ1533</description>
        <label>Commercial Policy Max</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Commercial_Policy_Min__c</fullName>
        <description>only used for R6 RQ1533</description>
        <label>Commercial Policy Min</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ConfigIT_isParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConfigIT Is Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cust_Req_Net__c</fullName>
        <label>Cust. Req. Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Material_Code__c</fullName>
        <label>Customer Material Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Days__c</fullName>
        <description>Field created for R4.1</description>
        <label>Delivery Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EstDiscTargetCustomer__c</fullName>
        <label>Estimated Discount Per Target Customer</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MinTotalDiscountWhls__c</fullName>
        <label>Min total discount WHls (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recovery1__c</fullName>
        <label>Recovery1(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recovery2__c</fullName>
        <label>Recovery2(%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recovery_Additional__c</fullName>
        <label>Additional Recovery Amount on order WHLs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recovery_Disc_for_target_Credit_Note__c</fullName>
        <label>%Recovery Disc. for target (Credit Note)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TSPA_Number__c</fullName>
        <description>If this field is not blank Base price will be updated from Price.IT</description>
        <formula>IF( APTS_Agreement__r.TSPANumber__c != Null,  APTS_Agreement__r.TSPANumber__c ,  IF(APTS_Quotation__r.TSPANumber__c != Null,  APTS_Quotation__r.TSPANumber__c , &apos;&apos;) )</formula>
        <label>TSPA Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetCustomerRecoveryAmt__c</fullName>
        <label>Target Customer Recovery Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalAmtRecovery__c</fullName>
        <label>Total Amount recovery for Wholesaler</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Quote_Discount__c</fullName>
        <label>Total Quote Discount Direct</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Recovery_Credit_note_MSPA__c</fullName>
        <label>%Total Recovery (Credit note + MSPA)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Recovery__c</fullName>
        <label>Total Recovery for Wholesalers</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhlsPriceWithRecovery1__c</fullName>
        <label>Whls price with recovery 1 sell in price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhlsPriceWithRecovery2__c</fullName>
        <label>Whls price with recovery 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WhsEstPriceWithTarget__c</fullName>
        <label>WHS estimated price with target</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>p_delta__c</fullName>
        <description>only used for R6; RQ1533</description>
        <inlineHelpText>used for Wholesaler scenarios</inlineHelpText>
        <label>% delta</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Configurator Cart Summary</label>
    <listViews>
        <fullName>All</fullName>
        <columns>APTS_Account__c</columns>
        <columns>APTS_Quotation__c</columns>
        <columns>APTS_Configuration_Reference_Id__c</columns>
        <columns>APTS_Product__c</columns>
        <columns>APTS_Qty__c</columns>
        <columns>APTS_Discount_Type__c</columns>
        <columns>APTS_Discount_Percentage__c</columns>
        <columns>APTS_Net_Price_Override__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APTS_Configuration_Reference_Id__c</field>
            <operation>equals</operation>
            <value>1234567</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CCS-{0000000000}</displayFormat>
        <label>Configurator Cart Summary Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurator Cart Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>